--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,8 @@
 * {
     font-family: Roboto, sans-serif;
 }
+
+html{
+    min-height:100%;/* make sure it is at least as tall as the viewport */
+    position:relative;
+}
